# kaspermini3.0

./: .gitignore  CMakeLists.txt  README.md  README.txt
src/ScannerApp/: CMakeLists.txt
src/ScannerApp/include/: CommandLine.h
src/ScannerApp/src/: CommandLine.cpp  main.cpp
src/ScannerLib/: CMakeLists.txt
src/ScannerLib/include/: HashDB.h  Scanner.h  ScannerAPI.h  Utils.h
src/ScannerLib/src/: HashDB.cpp  Scanner.cpp  Utils.cpp
test_data/: malware_base.csv
tests/: CMakeLists.txt  HashDBTest.cpp  ScannerTest.cpp  UtilsTest.cpp
